clusters/prod/apps/website/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: website
  ports:
    - name: http
      port: 80
      targetPort: http
